# personal-assistant-web

./: .gitignore  README.md  compose.yaml  pyproject.toml  requirements.txt
personal_assistant/: .env.example  Dockerfile  db.sqlite3  requirements.txt
personal_assistant/cloud_storage/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
personal_assistant/cloud_storage/migrations/: 0001_initial.py
personal_assistant/contacts/: admin.py  forms.py  models.py  urls.py  views.py
personal_assistant/contacts/migrations/: 0001_initial.py  0002_rename_name_contact_first_name_contact_last_name.py  0003_contact_created_at_contact_created_by_and_more.py  0004_alter_contact_created_by_alter_contact_modified_by.py
personal_assistant/news/: urls.py  views.py
personal_assistant/notes/: admin.py  forms.py  models.py  urls.py  views.py
personal_assistant/notes/migrations/: 0001_initial.py
personal_assistant/personal_assistant/: asgi.py  settings.py  urls.py  wsgi.py
personal_assistant/theme/: README.md
personal_assistant/theme/templates/: 404.html
personal_assistant/user_auth/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
personal_assistant/user_auth/migrations/: 0001_initial.py  0002_alter_employee_company.py  0002_employee_company_alter_employee_department.py
personal_assistant/users/: apps.py  forms.py  get_wether.py  models.py  signals.py  urls.py  views.py
personal_assistant/users/migrations/: 0001_initial.py  (+1 more)
personal_assistant/users_info/: apps.py  decorators.py  forms.py  models.py  urls.py  views.py
(+45 files in other folders)
